# snakemake-executor-plugin-slurm-gustave-roussy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: intro.md
snakemake_executor_plugin_slurm_gustave_roussy/: __init__.py
