[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-executor-plugin-slurm-gustave-roussy"
version = "0.5.3"
description = ""
authors = [ "tdayris <thibault.dayris@gustaveroussy.fr>",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tdayris/snakemake-executor-plugin-slurm-gustave-roussy"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm-gustave-roussy.html"
keywords = ["snakemake", "plugin", "executor", "cluster", "slurm", "gustave-roussy"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.13.0"
snakemake-interface-executor-plugins = "^9.1.1"
snakemake-executor-plugin-slurm-jobstep = "^0.2.0"
snakemake-executor-plugin-slurm = "^0.11.0"
throttler = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = "^8.20.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]
